# SummerSchool25_SBPGU

./: CMakeLists.txt  README.md
.github/workflows/: CI_MPI.yml  c-cpp.yml  cpp-linter.yml
include/: MPI_GEMM.h
samples/: CMakeLists.txt  NOT_CMakeLists.txt  main.cpp  sample.cpp
src/: CMakeLists.txt  MPI_GEMM.cpp  MPI_GEMM.cpp~RF669709e.TMP  main.cpp
test/: CMakeLists.txt  test_MPI_GEMM.cpp  test_example.cpp  test_main.cpp
